Tue Sep 10 20:35:23 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (auth_server_port_number): Change name of service from
	"cvs" to "cvspserver".  The latter is what the manual has always
	recommended, and it is also officially registered with IANA.

Tue Sep 10 11:12:42 1996  Mark A. Solinski <markso@mcs.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (socket_buffer_output): Change ifdef VMS to ifdef
	SEND_NEVER_PARTIAL. 
	(start_server): Change ifdef VMS to ifdef START_SERVER_RETURNS_SOCKET.

Tue Sep 10 17:15:21 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* client.c (auth_server_port_number): Look up "cvs" in the
 	services database, and use the value it returns; fall back to
	CVS_AUTH_PORT if no entry is present.
	(connect_to_pserver): Use the correct port number in any error
	messages.

Tue Sep 10 11:12:42 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (newb): New test newb-123j0 tests for another "cvs
	status" case.

Sun Sep  8 15:20:37 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_checkout): Clarify handling of options parameter.

	* rcs.c (RCS_checkout): Free buffer allocated by RCS_deltas.

Sat Sep  7 21:28:27 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (struct cmd): Add comment concerning recognizing unique
	abbreviations.

Fri Sep  6 22:31:52 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkout): Fix indentation.

Fri Sep  6 11:48:08 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_checkout): Replace tag parameter with rev and nametag
	parameters.  Change all callers.
	* rcs.h (RCS_checkout): Update declaration.

	* rcs.c (RCS_getversion): Replace return_both parameter with
	simple_tag.  Change all callers.
	(RCS_gettag): Likewise.
	* rcs.h (RCS_getversion, RCS_gettag): Update declarations.
	* vers_ts.c (Version_TS): Simplify vn_tag initialization using new
	simple_tag rather than old return_both.
	* cvs.h (struct vers_ts): Clarify vn_tag comment a bit.
