@@ -1,3 +1,11 @@
+Tue Sep 10 20:35:23 1996  Juergen Renz  <renz@conware.de>
+			  and Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* commit.c (precommit_list_proc): Update to reflect Jul 22 change
+	in which p->data was changed from a Ctype to a struct
+	logfile_info *.  This means that commitinfo scripts again get
+	passed the file	list like they should.
+
 Tue Sep 10 20:35:23 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* client.c (auth_server_port_number): Change name of service from
